
option java_outer_classname="AddResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message AddResponse {
}