import "LockInfo.proto";


option java_outer_classname="GetCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetCommand {
	optional string key = 1;
	optional int64 requestId = 2;
	optional int32 flag = 3;
	optional LockInfo lockInfo = 4;
}
